--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,3 @@
 PORT=5000
-MONGODB_URL="mongodb+srv://kathir200420:kathiravan@user.s52zx.mongodb.net/?retryWrites=true&w=majority&appName=User"
+MONGODB_URL="mongodb://localhost:27017/"
+JWT_SECRET_KEY="kathir"
