--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
 PORT=5000
-MONGODB_URL="mongodb://localhost:27017/"
+MONGODB_URL="mongodb+srv://kathir200420:kathiravan@user.s52zx.mongodb.net/user?retryWrites=true&w=majority&appName=user"
 JWT_SECRET_KEY="kathir"
